--- a/app/views/signin.html
+++ b/app/views/signin.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Signin</title>
+	<title>Login</title>
 </head>
 <body>
 	<form id="signin" name="signin" method="post" action="signin">
