Coord Eval, creando Factor

--- a/app/views/coord_ev/index.html
+++ b/app/views/coord_ev/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 	<h3>Index | Coord. Evaluación</h3>
-	<a href="">Crear Factor</a>
+	<a href="/coord_ev/factor">Factor</a>
 </body>
 </html>
