Creando Instrumento de Evaluacion

--- a/app/views/coord_ev/instrumento/index.html
+++ b/app/views/coord_ev/instrumento/index.html
@@ -5,9 +5,8 @@
 	<title>CREDIUDO | Coord. Evaluación</title>
 </head>
 <body>
-	<h3>Index | Coord. Evaluación</h3>
-	<a href="/coord_ev/factor">Factor</a>
-	<br>
-	<a href="/coord_ev/instrument">Instrumento de Eval.</a>
+	<h3>Index | Instrumento de Evaluación</h3>
+
+	<a href="/coord_ev/add-instrument">Crear Instrumento de Eval.</a>
 </body>
 </html>
