agregando asiganar presidente en el modulo del admin

--- a/app/views/admin/index.html
+++ b/app/views/admin/index.html
@@ -44,9 +44,9 @@
 	    	</td>
 	    	<td>
 	    		<% if(Presidente == undefined) {%>
-					<a href="#">Asignar</a>
+					<a href="/admin/asignar-presi">Asignar</a>
 	    		<%}%>
-				<a href="">Cambiar</a>
+				<a href="#">Cambiar</a>
 	    	</td>
 	  	</tr>
 
