Validando busqueda de usuario (si el usuario no existe)

--- a/app/views/admin/asignar/busqueda-cp.html
+++ b/app/views/admin/asignar/busqueda-cp.html
@@ -14,7 +14,7 @@
 <body>
 	<h3>Asignar Coord Planificación</h3>
 
-	<form method="post" action="/admin/buscar">
+	<form method="post" action="/admin/buscar_cp">
 		<label for="cedula">Cedula de Identidad: </label>
 		<input type="text" name="cedula" placeholder="Ingrese una Cedula">
 
