--- a/app/views/index/index.html
+++ b/app/views/index/index.html
@@ -7,5 +7,14 @@
 <body>
 	<h2>CREDIUDO | Inicio</h2>
 	<a href="/login">Iniciar Sesion</a>
+
+	<br><br>
+	
+	<% if(Evaluaciones == undefined) {%>
+		
+	<%} else {%>
+		<a href="/empleado">Evaluacion</a>
+	<%}%>
+	
 </body>
 </html>
