Arreglando coord_evController

--- a/app/views/empleado/evaluacion/index.html
+++ b/app/views/empleado/evaluacion/index.html
@@ -3,6 +3,12 @@
 <head>
 	<meta charset="UTF-8">
 	<title>CREDIUDO | Dashboard</title>
+
+	<style type="text/css">
+		table, th, td {
+		    border: 1px solid black;
+		}
+	</style>
 </head>
 <body>
 	<h2>CREDIUDO | Evaluación</h2>
@@ -12,6 +18,25 @@
 	<br><br>
 	
 	<h3><%=Evaluacion.nombre%></h3>
+	<br>
+
+	<table style="width:80%">
+	  	<tr>
+	    	<td width="5%"></td>
+	    	<td>Factor</td> 
+	    	<td width="25%"></td>
+	  	</tr>
+	  	<tr>
+	    	<td>Jill</td>
+	    	<td>Smith</td> 
+	    	<td>50</td>
+	  	</tr>
+	  	<tr>
+	    	<td>Eve</td>
+	    	<td>Jackson</td> 
+	    	<td>94</td>
+	  	</tr>
+	</table>
 	
 </body>
 </html>
