--- a/app/views/empleado/evaluacion/index.html
+++ b/app/views/empleado/evaluacion/index.html
@@ -19,13 +19,28 @@
 	
 	<h3><%=Evaluacion.nombre%></h3>
 	<br>
+	<h4>Nombre o Titulo del Instrumento de Eval: <%=Evaluacion.instrument.titulo%></h4>
 
 	<table style="width:80%">
-	  	<tr>
-	    	<td width="5%"></td>
-	    	<td>Factor</td> 
-	    	<td width="25%"></td>
-	  	</tr>
+		<% var k=0 %>
+		<%for(let i=0; i < instrumentFactor.length; i++){%>
+			<tr>
+		    	<td width="5%"></td>
+		    	<td><%=instrumentFactor[i].factor.nombre%></td> 
+		    	<td width="25%"></td>
+		  	</tr>
+
+		  	<% for(let j=0; j < Items.length; j++) {%>
+				<%if(Items[j].factorId == instrumentFactor[i].factorId){%>
+					<tr>
+				    	<td width="5%"><%= k=k+1 %></td>
+				    	<td><%=Items[j].nombre%></td> 
+				    	<td width="25%"></td>
+				  	</tr>					
+				<%}%>
+		  	<%}%>	
+		<%}%>
+	  	<!--
 	  	<tr>
 	    	<td>Jill</td>
 	    	<td>Smith</td> 
@@ -36,6 +51,7 @@
 	    	<td>Jackson</td> 
 	    	<td>94</td>
 	  	</tr>
+	  -->
 	</table>
 	
 </body>
