--- a/app/views/empleado/evaluacion/index.html
+++ b/app/views/empleado/evaluacion/index.html
@@ -35,23 +35,13 @@
 					<tr>
 				    	<td width="5%"><%= k=k+1 %></td>
 				    	<td><%=Items[j].nombre%></td> 
-				    	<td width="25%"></td>
+				    	<td width="25%">
+				    		
+				    	</td>
 				  	</tr>					
 				<%}%>
 		  	<%}%>	
 		<%}%>
-	  	<!--
-	  	<tr>
-	    	<td>Jill</td>
-	    	<td>Smith</td> 
-	    	<td>50</td>
-	  	</tr>
-	  	<tr>
-	    	<td>Eve</td>
-	    	<td>Jackson</td> 
-	    	<td>94</td>
-	  	</tr>
-	  -->
 	</table>
 	
 </body>
