--- a/app/views/index/index.html
+++ b/app/views/index/index.html
@@ -10,11 +10,10 @@
 
 	<br><br>
 	
-	<% if(Evaluaciones == undefined) {%>
+	<% if(Evaluaciones == 0) {%>
 		
 	<%} else {%>
-		<a href="/empleado">Evaluacion</a>
+		<a href="/dashboard">Evaluacion</a>
 	<%}%>
-	
 </body>
 </html>
