--- a/app/views/empleado/index.html
+++ b/app/views/empleado/index.html
@@ -102,7 +102,7 @@
 
 						<input type="hidden" name="fecha_f" id="fecha_f" value="<%=evaluacionUsuario[i].evaluacion.fecha_f%>">
 
-						<a href="/dashboard/evaluacion/<%=evaluacionUsuario[i].evaluacionId%>/u/<%=evaluacionUsuario[i].usuarioCedula%>" id="evaluacion" onclick="comprobar("hola",5);"><%=evaluacionUsuario[i].evaluacion.nombre%></a>
+						<a href="/dashboard/evaluacion/<%=evaluacionUsuario[i].evaluacionId%>/u/<%=evaluacionUsuario[i].usuarioCedula%>/ue/<%=evaluacionUsuario[i].usuarioEvaluado%>" id="evaluacion" onclick="comprobar("hola",5);"><%=evaluacionUsuario[i].evaluacion.nombre%></a>
 					</td>
 			  	</tr>
 			<%}%>
