agregando Ver por cada Usuario

--- a/app/views/president/detalles/index.html
+++ b/app/views/president/detalles/index.html
@@ -42,6 +42,7 @@
 				<td><%= Empleados[j].nombre %></td>
 				<td><%= Empleados[j].apellido %></td>
 				<td><%= Empleados[j].cedula %></td>
+				<td><a href="">Ver</a></td>
 			</tr>
 	  	<%}%>
 	</table>
