--- a/app/views/president/detalles/index.html
+++ b/app/views/president/detalles/index.html
@@ -12,39 +12,29 @@
 </head>
 <body>
 	<h3>Detalles | Evaluación</h3>
-	
+		
+	<h3>Evaluador: <%= dataEvaluacion[0].usuarioCedula %></h3>
 	<br><br>
-
-	<h4>Total Examenes: <%= usuario.length %></h4>
-	<h4>
-		Examenes realizados:
-		<% var examen_true = 0 %>
-		<% for(var i = 0; i < usuario.length; i ++) {%>
-			<% if(usuario[i].status == true) {%>
-				<% examen_true = examen_true + 1 %>
-			<%}%>
-		<%}%>
-		<%= examen_true %> 
-	</h4>
-
-	<h4>Personal adscrito en esta unidad:</h4>
 
 	<table style="width:50%">
 		<tr>
-	    	<th>Nombre</th>
-	    	<th>Apellido</th> 
-	    	<th>Cedula</th>
-	    	<th>Evaluar</th>
-	  	</tr>
+			<th>Evaluado</th>
+			<th>Evaluación</th>
+		</tr>
 
-	  	<% for(var j = 0; j < Empleados.length; j ++) {%>
+		<% for(let i = 0; i < dataEvaluacion.length; i ++) {%>
 			<tr>
-				<td><%= Empleados[j].nombre %></td>
-				<td><%= Empleados[j].apellido %></td>
-				<td><%= Empleados[j].cedula %></td>
-				<td><a href="">Ver</a></td>
+				<td><%= dataEvaluacion[i].usuarioEvaluado %></td>
+				<td>
+					<% if(dataEvaluacion[i].status == false) {%>
+						En Proceso
+					<%} else {%>
+						<a href="">Culminada</a>
+					<%}%>
+				</td>
 			</tr>
-	  	<%}%>
+		<%}%>	
 	</table>
+	
 </body>
 </html>
