--- a/app/views/empleado/evaluacion/index.html
+++ b/app/views/empleado/evaluacion/index.html
@@ -61,19 +61,19 @@
 					    	<td width="5%"><%= k=k+1 %></td>
 					    	<td><%=Items[j].nombre%></td> 
 					    	<td>
-					    		<input type="radio" name="item[<%= k %>]" value=2 id="item_[<%= j %>]">
+					    		<input type="radio" name="item[<%= k %>][<%= i %>]" value=2 id="item_[<%= j %>]">
 					    	</td>
 					    	<td>
-					    		<input type="radio" name="item[<%= k %>]" value=4 id="item_[<%= j %>]">
+					    		<input type="radio" name="item[<%= k %>][<%= i %>]" value=4 id="item_[<%= j %>]">
 					    	</td>
 					    	<td>
-					    		<input type="radio" name="item[<%= k %>]" value=6 id="item_[<%= j %>]">
+					    		<input type="radio" name="item[<%= k %>]<%= i %>" value=6 id="item_[<%= j %>]">
 					    	</td>
 					    	<td>
-					    		<input type="radio" name="item[<%= k %>]" value=8 id="item_[<%= j %>]">
+					    		<input type="radio" name="item[<%= k %>][<%= i %>]" value=8 id="item_[<%= j %>]">
 					    	</td>
 					    	<td>
-					    		<input type="radio" name="item[<%= k %>]" value=10 id="item_[<%= j %>]">
+					    		<input type="radio" name="item[<%= k %>][<%= i %>]" value=10 id="item_[<%= j %>]">
 					    	</td>
 					  	</tr>					
 					<%}%>
