Mejorando el procesamiento de una evaluacion

--- a/app/views/president/detalles/culminado/index.html
+++ b/app/views/president/detalles/culminado/index.html
@@ -30,5 +30,22 @@
 			</tr>
 		<%}%>
 	</table>
+	
+	<br>
+	
+	<% for(let j = 0; j < dataEvaluacion.length; j ++) {%>
+
+	<%}%>
+	<table style="width:15%">
+		<tr>
+			<th>Calificación General</th>
+		</tr>
+
+		<tr>
+			<td>
+				<h1><%= dataEvaluacion.calificacion %> Ptos</h1>
+			</td>
+		</tr>
+	</table>
 </body>
 </html>
