Modificando nuevamente el procesamiento de una evaluacion

--- a/app/views/empleado/evaluacion/index.html
+++ b/app/views/empleado/evaluacion/index.html
@@ -68,19 +68,19 @@
 					    	<td width="5%"></td>
 					    	<td><%=Items[j].nombre%></td> 
 					    	<td>
-					    		<input type="radio" name="item[<%= k %>][<%= i %>]" value=2 id="item" required>
+					    		<input type="radio" name="item[<%= j %>]" value=2 id="item" required>
 					    	</td>
 					    	<td>
-					    		<input type="radio" name="item[<%= k %>][<%= i %>]" value=4 id="item" required>
+					    		<input type="radio" name="item[<%= j %>]" value=4 id="item" required>
 					    	</td>
 					    	<td>
-					    		<input type="radio" name="item[<%= k %>][<%= i %>]" value=6 id="item" required>
+					    		<input type="radio" name="item[<%= j %>]" value=6 id="item" required>
 					    	</td>
 					    	<td>
-					    		<input type="radio" name="item[<%= k %>][<%= i %>]" value=8 id="item" required>
+					    		<input type="radio" name="item[<%= j %>]" value=8 id="item" required>
 					    	</td>
 					    	<td>
-					    		<input type="radio" name="item[<%= k %>][<%= i %>]" value=10 id="item" required>
+					    		<input type="radio" name="item[<%= j %>]" value=10 id="item" required>
 					    	</td>
 					  	</tr>
 					  	<% k=k+1 %>					
